@@ -35,7 +35,7 @@ dest_file_compress = true
 # so other applications could use decoded data (like client_xxxx)
 dest_localhost = true
 
-# output crcs to screen, mainly to debug purposes
+# output crcs to screen, mainly to debug purposes (must enable mode_scrm to calculate crcs)
 # dest_screen_crc = false
 
 # ensure asterix versions
